Solve problem with visible scrollbar on angluar trello too

--- a/angular-trello/src/app/app.component.scss
+++ b/angular-trello/src/app/app.component.scss
@@ -1,7 +1,9 @@
 .container {
-    height: 100vh;
+    min-height: 100vh;
     background-image: url("../assets/red-fruit-handing-on-tree-branch-selective-color-photography-64705.jpg");
     background-size: cover;
+    overflow-y: auto;
+    padding: 0 1rem;
 }
 
 .title {
@@ -9,12 +11,16 @@
     text-align: center;
     text-transform: uppercase;
     margin-bottom: 0;
+    box-sizing: border-box;
+    height: 4.3rem,
 }
 
 .board {
     display: flex;
     align-items: flex-start;
-    overflow-x: scroll;
+    overflow-x: auto;
+    overflow-y: hidden;
+    min-height: calc(100vh - 4.3rem);
 
     &__column {
         display: flex;
