--- a/angular-trello/src/app/components/card-list/card-list.component.scss
+++ b/angular-trello/src/app/components/card-list/card-list.component.scss
@@ -1,6 +1,6 @@
 .cards {
-    max-height: 60vh;
-    overflow-y: scroll;
+    max-height: 30rem;
+    overflow-y: auto;
     margin-bottom: 1rem;
 }
 
